<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="sat">sat</string>
    <string name="sun">sun</string>
    <string name="mon">mon</string>
    <string name="tue">tue</string>
    <string name="wed">wed</string>
    <string name="thu">thu</string>
    <string name="fri">fri</string>
    <string name="title">title</string>
    <string name="add_txt">add txt</string>
    <string name="save">save</string>
</resources>